bugfix: fix z-index issue for mobile nav on blog prose page

--- a/src/styles/blog-post.css
+++ b/src/styles/blog-post.css
@@ -85,16 +85,14 @@ html {
 /* Z-index and positioning */
 .blog-main {
   position: relative;
-  z-index: 0;
 }
 
 .blog-prose {
   position: relative;
-  z-index: 1;
 }
 
 .blog-aside {
-  z-index: 2;
+  position: relative;
 }
 
 /* Prose spacing */
